开发部分管理员接口
