# models/administer.go
@@ -1,5 +1,9 @@
 package models
 
 type Administer struct {
-	Name string `json:"name" binding:"required"`
+	Name string `json:"name" binding:"required"` // 管理员名称，校验用
+}
+
+type StarUser struct {
+	UserID string `json:"user_id"` // 用户id
 }
